Fix text-align in dropdown (for example when in modal footer)

--- a/less/components/button-dropdown.less
+++ b/less/components/button-dropdown.less
@@ -12,6 +12,7 @@
 
 .dropdown, .btn-group.dropdown {
     position: relative;
+    text-align: left;
 
     > .dropdown-menu {
         position: absolute;
